# Chat-with-Database-SQL

./: .gitignore  README.md  api_key.py  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sqlite.py  structure.txt
agents/: sql_agent.py
config/: api_key.py  database.py
data/: README.md
data/data_source/: student.sql
data_source/: README.md
data_source/mysql_source/: test.sql
database/: sqlite.py
test/: test_model.py
utils/: database_manager.py  memory_manager.py  model_handler.py
